# wellness

./: .gitignore  README.md  start_server.sh
backend/: fix_collection_system.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: newsletters.py
backend/app/core/: config.py  database.py
backend/app/models/: newsletter.py
backend/app/schemas/: newsletter.py
backend/app/services/: newsletter_collector.py
backend/app/tests/: conftest.py
collaboration/communications/: project_kickoff.md
collaboration/decisions/: 2024-12-22_PM_final_requirements_integration.md
collaboration/design/: 2025-12-19_Designer_to_PM_aman_style_proposal.md
collaboration/meetings/: 2025-08-07_UI_Simplification_Meeting.md  2025-12-19_Luxury_Design_Upgrade_Meeting.md
collaboration/protocols/: COLLABORATION_PROTOCOL.md  COLLABORATION_PROTOCOL_V2.md
collaboration/requirements/: 2024-12-19_PM_to_Developer_technical_requirements.md  2024-12-19_PM_to_Writer_content_requirements.md  2024-12-21_Developer_to_PM_technical_constraints.md  2024-12-21_Writer_to_PM_content_requirements_feedback.md
frontend/static/css/: style.css
frontend/templates/: 404.html  500.html  base.html  index.html
scripts/: run_server.py  run_tests.py
